ffi/include/int2dds-ffi.h

/**
 * Opaque handle to a DomainParticipant
 */
typedef struct Int2DdsParticipant Int2DdsParticipant;
/**
 * Opaque handle to a Topic
 */
typedef struct Int2DdsTopic Int2DdsTopic;
/**
 * Opaque QoS handle for Topic
 */
typedef struct Int2DdsTopicQos Int2DdsTopicQos;
/**
 * Opaque type info builder for the FFI layer.
 *
 * Collects field descriptions and builds TypeIdentifier/TypeObject
 * for DDS-XTypes discovery.
 */
typedef struct Int2DdsTypeInfo Int2DdsTypeInfo;
/**
 * FFI return codes
 */
typedef int32_t Int2DdsRet;
/**
 * Create a Topic
 *
 * Creates a topic with RawTypeSupport for use with `int2dds_write_serialized()`
 * and `int2dds_take_serialized()`. C users handle CDR serialization themselves
 * using IDL-generated code.
 *
 * # Safety
 * - `participant` must be a valid participant
 * - `topic_name` must be a valid null-terminated C string
 * - `dds_type_name` must be a valid null-terminated C string (DDS registration name)
 * - `extensibility`: 0 = Final, 1 = Appendable, 2 = Mutable
 * - `qos` can be null for default QoS
 * - `topic_out` must be a valid pointer to a null pointer
 * - The returned topic must be freed with `int2dds_delete_topic`
 */
Int2DdsRet int2dds_create_topic(const struct Int2DdsParticipant *participant,
                                const char *topic_name,
                                const char *dds_type_name,
                                int32_t extensibility,
                                const struct Int2DdsTopicQos *qos,
                                struct Int2DdsTopic **topic_out);
/**
 * Create a Topic with key support
 *
 * Same as `int2dds_create_topic` but with an explicit `has_key` parameter.
 * Use this when the data type has key fields for instance management
 * (register_instance, unregister_instance, dispose, lookup_instance).
 *
 * # Safety
 * - `participant` must be a valid participant
 * - `topic_name` must be a valid null-terminated C string
 * - `dds_type_name` must be a valid null-terminated C string (DDS registration name)
 * - `extensibility`: 0 = Final, 1 = Appendable, 2 = Mutable
 * - `has_key`: whether the data type has key fields
 * - `qos` can be null for default QoS
 * - `topic_out` must be a valid pointer to a null pointer
 * - The returned topic must be freed with `int2dds_delete_topic`
 */
Int2DdsRet int2dds_create_topic_keyed(const struct Int2DdsParticipant *participant,
                                      const char *topic_name,
                                      const char *dds_type_name,
                                      int32_t extensibility,
                                      bool has_key,
                                      const struct Int2DdsTopicQos *qos,
                                      struct Int2DdsTopic **topic_out);
/**
 * Create a Topic with type information for DDS-XTypes discovery
 *
 * Creates a topic using a pre-built `Int2DdsTypeInfo` which provides
 * TypeIdentifier and TypeObject for DDS discovery parameters (0x0075/0x0069, 0x0072).
 * This enables interoperability with implementations that require type information
 *
 * # Safety
 * - `participant` must be a valid participant
 * - `topic_name` must be a valid null-terminated C string
 * - `type_info` must be a valid `Int2DdsTypeInfo` created by `int2dds_type_info_create`
 * - `qos` can be null for default QoS
 * - `topic_out` must be a valid pointer to a null pointer
 * - The returned topic must be freed with `int2dds_delete_topic`
 */
Int2DdsRet int2dds_create_topic_with_type_info(const struct Int2DdsParticipant *participant,
                                               const char *topic_name,
                                               const struct Int2DdsTypeInfo *type_info,
                                               const struct Int2DdsTopicQos *qos,
                                               struct Int2DdsTopic **topic_out);
/**
 * Delete a Topic
 *
 * # Safety
 * - `topic` must be a valid topic created by `int2dds_create_topic`
 * - `topic` must not be used after this call
 * - All DataReaders and DataWriters using this topic must be deleted first
 */
Int2DdsRet int2dds_delete_topic(struct Int2DdsTopic *topic);
/**
 * Get the name of a Topic
 *
 * # Safety
 * - `topic` must be a valid topic
 * - `name_out` must be a valid pointer to a char buffer
 * - `name_size` is the size of the buffer
 */
Int2DdsRet int2dds_topic_get_name(const struct Int2DdsTopic *topic,
                                  char *name_out,
                                  uintptr_t name_size);
/**
 * Get the type name of a Topic
 *
 * # Safety
 * - `topic` must be a valid topic
 * - `type_name_out` must be a valid pointer to a char buffer
 * - `type_name_size` is the size of the buffer
 */
Int2DdsRet int2dds_topic_get_type_name(const struct Int2DdsTopic *topic,
                                       char *type_name_out,
                                       uintptr_t type_name_size);